--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node-youtube-music": "^0.10.3"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "name": "testnode",
   "version": "1.0.0",
